# DS1000Z-ScopeInterface

./: .gitignore  .scope.toml  Makefile  README.md  scope  template.py
src/: CMakeLists.txt  client.cpp  client.hpp  client.py  commands.py  configs.cpp  configs.hpp  main.cpp  main.py  parameters.cpp  parameters.hpp  scope.cpp  scope.hpp  scope.py  tcp_conn.cpp  tcp_conn.hpp  tcp_conn.py  utils.cpp  utils.hpp  workflows.cpp  workflows.hpp
